log
Thu 16 May 2024 11:33:18 PM UTC: 
 tests:  0|5
total_score: 0/70
1c984ed
Thu 16 May 2024 11:38:50 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
   74 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a3cef0c
Thu 16 May 2024 11:39:39 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
271715a
Thu 16 May 2024 11:40:36 PM UTC: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
5284f63
Thu 16 May 2024 11:41:49 PM UTC: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
cbf9c3c
Thu 16 May 2024 11:41:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
8231aa5
